force-app/main/default/objects/LogVoo__c/LogVoo__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar inforamações oriundas do Skytrac</description>
    <label>Log de Voo</label>
    <nameField>
        <displayFormat>LV-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Voos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>