force-app/main/default/objects/LogVoo__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <label>AssetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>