force-app/main/default/objects/LogVoo__c/fields/DTEDevice__c.field-meta.xml
<CustomField>
    <fullName>DTEDevice__c</fullName>
    <label>DTEDevice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>