force-app/main/default/objects/LogVoo__c/fields/ErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de Integração</label>
    <type>Checkbox</type>
</CustomField>