force-app/main/default/objects/LogVoo__c/fields/GateTime__c.field-meta.xml
<CustomField>
    <fullName>GateTime__c</fullName>
    <label>GateTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>