force-app/main/default/objects/LogVoo__c/fields/GateTimeDatetime__c.field-meta.xml
<CustomField>
    <fullName>GateTimeDatetime__c</fullName>
    <label>GateTimeDatetime</label>
    <type>DateTime</type>
</CustomField>