force-app/main/default/objects/LogVoo__c/fields/LicenseKey__c.field-meta.xml
<CustomField>
    <fullName>LicenseKey__c</fullName>
    <label>LicenseKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>