force-app/main/default/objects/LogVoo__c/fields/PosnTime__c.field-meta.xml
<CustomField>
    <fullName>PosnTime__c</fullName>
    <label>PosnTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>