force-app/main/default/objects/LogVoo__c/fields/PosnTimeDatetime__c.field-meta.xml
<CustomField>
    <fullName>PosnTimeDatetime__c</fullName>
    <label>PosnTime Datetime</label>
    <type>DateTime</type>
</CustomField>