force-app/main/default/objects/LogVoo__c/fields/PosnType__c.field-meta.xml
<CustomField>
    <fullName>PosnType__c</fullName>
    <label>PosnType</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>