force-app/main/default/objects/LogVoo__c/fields/SentTime__c.field-meta.xml
<CustomField>
    <fullName>SentTime__c</fullName>
    <label>SentTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>