force-app/main/default/objects/LogVoo__c/fields/SentTimeDateTime__c.field-meta.xml
<CustomField>
    <fullName>SentTimeDateTime__c</fullName>
    <label>SentTimeDateTime</label>
    <type>DateTime</type>
</CustomField>