force-app/main/default/objects/LogVoo__c/fields/SessionID__c.field-meta.xml
<CustomField>
    <fullName>SessionID__c</fullName>
    <label>SessionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>