force-app/main/default/objects/LogVoo__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trecho</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Logs de Voos</relationshipLabel>
    <relationshipName>LogsVoos</relationshipName>
    <type>Lookup</type>
</CustomField>