force-app/main/default/objects/LogVoo__c/recordTypes/Message.recordType-meta.xml
<RecordType>
    <fullName>Message</fullName>
    <active>true</active>
    <label>Message</label>
</RecordType>