force-app/main/default/objects/LogVoo__c/recordTypes/Position.recordType-meta.xml
<RecordType>
    <fullName>Position</fullName>
    <active>true</active>
    <label>Position</label>
</RecordType>