force-app/main/default/objects/LogVoo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Aeronave__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PosnType__c</columns>
    <columns>Local__c</columns>
    <columns>PosnTimeDatetime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>