force-app/main/default/objects/LogVoo__c/listViews/LogsHoje.listView-meta.xml
<ListView>
    <fullName>LogsHoje</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Aeronave__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PosnType__c</columns>
    <columns>Local__c</columns>
    <columns>PosnTimeDatetime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Logs de hoje</label>
</ListView>