force-app/main/default/objects/LogVoo__c/listViews/Messages.listView-meta.xml
<ListView>
    <fullName>Messages</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Aeronave__c</columns>
    <columns>SentTimeDateTime__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LogVoo__c.Message</value>
    </filters>
    <label>Messages</label>
</ListView>