force-app/main/default/objects/LogVoo__c/listViews/Position.listView-meta.xml
<ListView>
    <fullName>Position</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Aeronave__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PosnType__c</columns>
    <columns>Local__c</columns>
    <columns>PosnTimeDatetime__c</columns>
    <columns>Coordenadas__Latitude__s</columns>
    <columns>Coordenadas__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LogVoo__c.Position</value>
    </filters>
    <label>Position</label>
</ListView>